[project]
name = "iam-bob-langgraph"
version = "0.1.0"
description = "IAM Bob V3 — LangGraph Estate Cartographer vertical slice"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2",
  "langchain-core>=0.3",
]

[project.scripts]
bob-langgraph = "bob_langgraph.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
